<resources>
    <string name="app_name">GO-Elf</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="start_driving">Start Driving</string>
    <string name="stop_driving">Stop Driving</string>

    <string name="batched_location_updates">Location Tracking</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="activity_updates_enabled">Activity updates enabled</string>
    <string name="activity_updates_not_enabled">Failed to enable activity updates</string>
    <string name="activity_updates_removed">Activity updates removed</string>
    <string name="activity_updates_not_removed">Failed to remove activity updates</string>

    <string name="percent">%1$d%%</string>

    <!-- About Page -->
    <string name="header">Head Office</string>
    <string name="company_name">PT. VIO Intelligence</string>
    <string name="address">Intercon Plaza, D11 &amp; D20, Meruya Ilir, Jakarta Barat, 11620, Indonesia</string>
    <string name="telp">Tel: (62) 21 586-8521-2</string>
    <string name="fax">Fax: (62) 21-585-3317</string>
    <string name="email">Email: sales@gspe.co.id</string>
</resources>
